src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>OC_Stage_2_Outcome__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <description>The outcome of the second call stage. This field is auto-populated from the selected outcome on the second call stage.</description>
        <inlineHelpText>The outcome of the second call stage. This field is auto-populated from the selected outcome on the second call stage.</inlineHelpText>
        <label>T2 Catch Up Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Stage_3_Call_Date_Time__c</fullName>
        <description>The time call was made at the third stage</description>
        <inlineHelpText>The time call was made at the third stage</inlineHelpText>
        <label>TL1 Call Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OC_Stage_3_No_Sale_Reason__c</fullName>
        <description>No sale reason of the third call stage. This field is auto-populated from the selected outcome on the first call stage.</description>
        <inlineHelpText>No sale reason of the third call stage. This field is auto-populated from the selected outcome on the first call stage.</inlineHelpText>
        <label>TL1 No Sale Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Stage_3_Outcome__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <description>The outcome of the third call stage. This field is auto-populated from the selected outcome on the third call stage.</description>
        <inlineHelpText>The outcome of the third call stage. This field is auto-populated from the selected outcome on the third call stage.</inlineHelpText>
        <label>TL1 Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OC_Sub_Weekly_Price__c</fullName>
        <description>Subscription weekly price</description>
        <inlineHelpText>Please specify subscription weekly price</inlineHelpText>
        <label>Sub Weekly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OC_Subscription_Outstanding_Balance__c</fullName>
        <description>Outstanding Balance from related Print Subscription</description>
        <formula>ABS(Print_Subscription__r.Outstanding_Balance_to_from_Customer__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outstanding Balance from related Print Subscription</inlineHelpText>
        <label>Subscription Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OC_Viewed_Date__c</fullName>
        <description>Date on which the case was viewed in the Outbound Calling page</description>
        <inlineHelpText>Please specify when the case was viewed in the Outbound Calling page</inlineHelpText>
        <label>Outbound Calling Viewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OC_Viewed_Timestamp_Critical__c</fullName>
        <description>The formula to identify the outbound calling cases that been viewed before 29 or more days</description>
        <formula>(NOW()- OC_Outbound_Calling_Viewed_Stamp__c )*1440 &lt; 29</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Was the outbound calling viewed before 29 or more days?</inlineHelpText>
        <label>Viewed Timestamp Critical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS_Version__c</fullName>
        <label>OS Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_System__c</fullName>
        <label>Operating System</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_Of_Issue__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>macOS</fullName>
                </value>
                <value>
                    <fullName>Linux</fullName>
                </value>
                <value>
                    <fullName>iOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
                <value>
                    <fullName>Kindle Fire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>Other_NATC_Reason__c</fullName>
        <description>Any other reason for NATC</description>
        <label>Other NATC Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Changed_On__c</fullName>
        <description>When did the outcome change for DDCX Cases?</description>
        <label>Outcome Changed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payer_Reference__c</fullName>
        <label>Payer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentId__c</fullName>
        <formula>Refund__r.Zuora__Payment__c</formula>
        <label>PaymentId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <formula>Payment__r.Zuora__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Gateway_Name__c</fullName>
        <label>Payment Gateway Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Card - Re-Try 1 Fail</fullName>
                </value>
                <value>
                    <fullName>Failed Card Payment - Card - Re-Try 2 Fail</fullName>
                </value>
                <value>
                    <fullName>Failed DD Set Up</fullName>
                </value>
                <value>
                    <fullName>Failed DD Payment</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Card - Initial Fail</fullName>
                </value>
                <value>
                    <fullName>DD Mandate Amended</fullName>
                </value>
                <value>
                    <fullName>DD Mandate Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed DD Set Up - Payment Cancelled</fullName>
                </value>
                <value>
                    <fullName>Direct Debit Indemnity Claim</fullName>
                </value>
                <value>
                    <fullName>DD In Set Up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relationship to Payment</description>
        <inlineHelpText>Relationship to Payment</inlineHelpText>
        <label>Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Print_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Print Subscription</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Subscription__c.Subscriber__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <inlineHelpText>Product Name is automatically populated with related Print Subscription&apos;s Product Name</inlineHelpText>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship to refund</description>
        <inlineHelpText>Lookup relationship to refund</inlineHelpText>
        <label>Refund</label>
        <referenceTo>Zuora__Refund__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removal_Reason__c</fullName>
        <label>Removal Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Retention_Call_Date_Time__c</fullName>
        <description>Time when the call was made</description>
        <inlineHelpText>Time when the call was made</inlineHelpText>
        <label>Retention Call Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Retention_Outcome__c</fullName>
        <description>Outcome only available for Retenction Calling RecordType</description>
        <label>Retention Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Call Completed</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>Answerphone</fullName>
                </value>
                <value>
                    <fullName>Busy</fullName>
                </value>
                <value>
                    <fullName>Reschedule</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retention_Priority__c</fullName>
        <description>Field used to decide sort order for Retention Calling</description>
        <formula>CASE(OC_Outcome__c, 
&apos;Reschedule&apos;, 1,
&apos;Busy&apos;, 2,
&apos;Not Started&apos;, 3,
&apos;Answerphone&apos;, 4,
&apos;No Answer&apos;, 5,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Show sort order for Retention Calling</inlineHelpText>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rewards_Number__c</fullName>
        <label>Rewards Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Date_Selector__c</fullName>
        <description>Helper field for Custom Case Search to select Created Date timespan</description>
        <label>Search Date Selector</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sort_Code_Formula__c</fullName>
        <formula>IF(ISBLANK(Sort_Code__c),Payment__r.Payment_Method__r.Zuora__BankCode__c, Sort_Code__c)</formula>
        <label>Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Code__c</fullName>
        <label>Sort Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Of_Vouchers__c</fullName>
        <label>Start_Date Of Vouchers</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Detail__c</fullName>
        <formula>Subscription__r.Zuora_Subscription_Status__c</formula>
        <label>Subscription Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Price__c</fullName>
        <formula>IF(
   NOT(ISBLANK(Print_Subscription__c)), 
   Print_Subscription__r.Weekly_Price__c, 
   IF(
      NOT(ISBLANK(Subscription__c)), 
      Subscription__r.Initial_Subscription_Price__c, 
      NULL
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Print Subscription&apos;s Weekly Price or Zuora Subscription&apos;s Initial Price</inlineHelpText>
        <label>Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <formula>Subscription__r.Subscription_Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <formula>Subscription__r.Subscription_Type__c</formula>
        <label>Subscription Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to Zuora Subscription</description>
        <inlineHelpText>Lookup field to Zuora Subscription</inlineHelpText>
        <label>Zuora Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMG_Engagement_Segment__c</fullName>
        <formula>Account.TMG_Model_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TMG Engagement Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Through_Damage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Through Damage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Of_Issue__c</fullName>
        <label>Case Detail 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Amend Customer Details</fullName>
                </value>
                <value>
                    <fullName>Amendment to bank details</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Announcements</fullName>
                </value>
                <value>
                    <fullName>Apple News</fullName>
                </value>
                <value>
                    <fullName>Apple News App</fullName>
                </value>
                <value>
                    <fullName>Article Queries</fullName>
                </value>
                <value>
                    <fullName>Back Copy Request</fullName>
                </value>
                <value>
                    <fullName>Blackberry &gt; General information</fullName>
                </value>
                <value>
                    <fullName>Blackberry &gt; Troubleshooting</fullName>
                </value>
                <value>
                    <fullName>Bookshop</fullName>
                </value>
                <value>
                    <fullName>Box Office</fullName>
                </value>
                <value>
                    <fullName>BR1</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>CC Payment Query</fullName>
                </value>
                <value>
                    <fullName>CCEX1</fullName>
                </value>
                <value>
                    <fullName>Change of voucher type</fullName>
                </value>
                <value>
                    <fullName>City Share</fullName>
                </value>
                <value>
                    <fullName>Clearing App</fullName>
                </value>
                <value>
                    <fullName>Code 0</fullName>
                </value>
                <value>
                    <fullName>Code 1</fullName>
                </value>
                <value>
                    <fullName>Code 2</fullName>
                </value>
                <value>
                    <fullName>Code 3</fullName>
                </value>
                <value>
                    <fullName>Code 4</fullName>
                </value>
                <value>
                    <fullName>Code 5</fullName>
                </value>
                <value>
                    <fullName>Code 6</fullName>
                </value>
                <value>
                    <fullName>Code 7</fullName>
                </value>
                <value>
                    <fullName>Code 8</fullName>
                </value>
                <value>
                    <fullName>Code 9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voucher_Activity_End_Date__c</fullName>
        <formula>Voucher_Activity__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Activity_Start_Date__c</fullName>
        <formula>Voucher_Activity__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related voucher activity record</description>
        <inlineHelpText>Related voucher activity record</inlineHelpText>
        <label>Voucher Activity</label>
        <referenceTo>Voucher_Adjustment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Cancellation</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Cancellation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ChasingOutstandingVouchers</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Chasing Outstanding Vouchers</label>
    </recordTypes>
    <recordTypes>
        <fullName>CoverPriceIncreaseBarcodeIssues</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Cover Price Increase/Barcode Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Digital_Services</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Digital Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Failed_Payment</fullName>
        <active>true</active>
        <businessProcess>TMG Digital Payment</businessProcess>
        <description>RecordType related to Failed Payment Case</description>
        <label>Failed Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Financial_Enquiry_FP</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Financial Enquiry (FP)</label>
    </recordTypes>
    <recordTypes>
        <fullName>GeneralEnquiry</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>General Enquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inbound</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <description>Inbound Cases</description>
        <label>Inbound</label>
    </recordTypes>
    <recordTypes>
        <fullName>NewsagentIssues</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Newsagent Issues</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound_Calling_Balance_Review</fullName>
        <active>true</active>
        <businessProcess>TMG Outbound Calling</businessProcess>
        <description>Balance Review Outbound Calling record type</description>
        <label>Outbound Calling (Balance Review)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound_Calling_Credit_Card_Expiry</fullName>
        <active>true</active>
        <businessProcess>TMG Outbound Calling</businessProcess>
        <description>Credit Card Expiry Outbound Calling record type</description>
        <label>Outbound Calling (Credit Card Expiry)</label>
    </recordTypes>


    <recordTypes>
        <fullName>Outbound_Calling_DD_Cancellation</fullName>
        <active>true</active>
        <businessProcess>TMG Outbound Calling</businessProcess>
        <label>Outbound Calling (DD Cancellation)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound_Calling_DD_Winback</fullName>
        <active>true</active>
        <businessProcess>TMG Outbound Calling</businessProcess>
        <label>Outbound Calling (DD Winback)</label>
    </recordTypes>


    <recordTypes>
        <fullName>Outbound_Calling_Direct_Debit</fullName>
        <active>true</active>
        <businessProcess>TMG Outbound Calling</businessProcess>
        <description>Direct Debit Outbound Calling record type</description>
        <label>Outbound Calling (Direct Debit)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound_Calling_Retention</fullName>
        <active>true</active>
        <businessProcess>TMG Outbound Calling</businessProcess>
        <description>Outbound Calling (Retention) RecordType</description>
        <label>Outbound Calling (Retention)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outbound_Calling_Sales</fullName>
        <active>true</active>
        <businessProcess>TMG Outbound Calling</businessProcess>
        <description>Sales Outbound Calling record type</description>
        <label>Outbound Calling (Sales)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reader_Relations</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Reader Relations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Refund</label>
    </recordTypes>
    <recordTypes>
        <fullName>RemoveFromDatabase</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Remove From Database</label>
    </recordTypes>
    <recordTypes>
        <fullName>RequestforNonSystemGeneratedLetters</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Request for Non System Generated Letters</label>
    </recordTypes>
    <recordTypes>
        <fullName>RewardsEnquiry</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Rewards Enquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Admin</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <description>Any general Salesforce admin issue from a user</description>
        <label>Salesforce Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spam_Email</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Spam Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>SupplementRequests</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Supplement Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>Website_Issue</fullName>
        <active>false</active>
        <businessProcess>TMG Support Process</businessProcess>
        <description>Website Issue (Loyalty website issues).</description>
        <label>Website Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>Whitemail</fullName>
        <active>true</active>
        <businessProcess>TMG Support Process</businessProcess>
        <label>Whitemail</label>
    </recordTypes>
    <validationRules>
        <fullName>Debt_Collected_Should_be_populated</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    OR(
      RecordType.Name = &apos;Outbound Calling (DD Winback)&apos;,
      RecordType.Name = &apos;Outbound Calling (DD Cancellation)&apos;
    ),
    NOT(OR(
        ISPICKVAL(OC_Outcome__c,&apos;Not Started&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;No Answer&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Answerphone&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Busy&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Reschedule&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Wrong Number&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;NATC&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Auto Completed&apos;)
    )),
    ISPICKVAL(Debt_Collected__c, &apos;&apos;),
    ISCHANGED(OC_Outcome__c)
)</errorConditionFormula>
        <errorMessage>Please select if Debt Collected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Debt_Collected_amount_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
    OR(
      RecordType.Name = &apos;Outbound Calling (DD Winback)&apos;,
      RecordType.Name = &apos;Outbound Calling (DD Cancellation)&apos;
    ),
    NOT(OR(
        ISPICKVAL(OC_Outcome__c,&apos;Not Started&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;No Answer&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Answerphone&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Busy&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Reschedule&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Wrong Number&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;NATC&apos;),
        ISPICKVAL(OC_Outcome__c,&apos;Auto Completed&apos;)
    )),
    ISPICKVAL(Debt_Collected__c, &apos;Yes&apos;),
    ISBLANK(Debt_Collected_Amount__c), 
    ISCHANGED(OC_Outcome__c) 
)</errorConditionFormula>
        <errorMessage>Please enter a Debt Collected Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Outcome_NATC_should_have_reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
   ISPICKVAL(OC_Outcome__c, &apos;NATC&apos;),
   OR(
     ISPICKVAL(NATC_Reason__c,&apos;&apos;),
     AND(
       ISPICKVAL(NATC_Reason__c, &apos;Other&apos;), 
       Other_NATC_Reason__c = null 
      )
   )
)</errorConditionFormula>
        <errorMessage>Please enter NATC Reason, If NATC Reason is &apos;Other&apos; enter Other NATC Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Subscription_Link_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  OR(RecordType.Name = &apos;Outbound Calling (DD Cancellation)&apos;, 
        RecordType.Name = &apos;Outbound Calling (DD Winback)&apos;),
   ISBLANK(Subscription__c), 
   ISBLANK(Print_Subscription__c)

)</errorConditionFormula>
        <errorMessage>Case must be linked to either print or digital subscription</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Disable_Payonomy_Case_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Subject==&quot;Callback Failure Alert From WorldPay&quot; &amp;&amp; NOT(ISPICKVAL(Status,&quot;Closed&quot;)), true, false)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>You are not allowed to create cases with Subject=Callback Failure Alert From WorldPay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Save_If_Future_Action_Date_In_Past</fullName>
        <active>true</active>
        <errorConditionFormula>IF( $Profile.Name = &quot;TMG System&quot;,false,
Future_Action_Date__c  &lt; TODAY()
)</errorConditionFormula>
        <errorDisplayField>Future_Action_Date__c</errorDisplayField>
        <errorMessage>You cannot set the &apos;Future Action Date&apos; in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OC_Rescheduled_Outcome_Requires_Schedule</fullName>
        <active>true</active>
        <description>If Outbound Calling Outcome is selected Rescheduled the Scheduled Callback date time field is mandatory</description>
        <errorConditionFormula>AND(
ISPICKVAL(OC_Outcome__c, &apos;Reschedule&apos;),
ISBLANK(OC_Scheduled_Callback__c)
)</errorConditionFormula>
        <errorDisplayField>OC_Scheduled_Callback__c</errorDisplayField>
        <errorMessage>Please enter Scheduled Callback date and time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_One_Subscription</fullName>
        <active>true</active>
        <description>We can only have one Subscription number saved against the case.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Print_Subscription__c)), NOT(ISBLANK(Subscription__c)))</errorConditionFormula>
        <errorDisplayField>Subscription__c</errorDisplayField>
        <errorMessage>We can only have one Subscription number saved against the case.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlistVal_ANewsApp_Feedback_No_Child</fullName>
        <active>true</active>
        <description>Product-&gt;Apple News App-&gt;Feedback: no Case Detail 4 options are valid (leave unselected)</description>
        <errorConditionFormula>AND(
ISPICKVAL(
Reason ,
&quot;Products&quot;),
ISPICKVAL(
Type_Of_Issue__c ,
&quot;Apple News App&quot;),
ISPICKVAL(
Digital_Details__c ,
&quot;Feedback&quot;),
NOT(ISPICKVAL(
Digital_Details_3__c ,
&quot;&quot;))
)</errorConditionFormula>
        <errorMessage>Product-&gt;Apple News App-&gt;Feedback: no Case Detail 4 options are valid (leave unselected)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlistVal_ANewsApp_Information_Val_Option</fullName>
        <active>true</active>
        <description>Product-&gt;Apple News App-&gt;Information- valid options:  App Install; Navigate to; OS Update; Using the app.</description>
        <errorConditionFormula>AND( 
ISPICKVAL( 
Reason , 
&quot;Products&quot;
), 
ISPICKVAL( 
Type_Of_Issue__c , 
&quot;Apple News App&quot;
), 
ISPICKVAL( 
Digital_Details__c , 
&quot;Information&quot;
), 
Not(
 Or(
  ISPICKVAL( 
  Digital_Details_2__c , 
  &quot;&quot;
   ),
  ISPICKVAL( 
  Digital_Details_2__c , 
  &quot;Navigate to&quot;
   ),
  ISPICKVAL( 
  Digital_Details_2__c , 
  &quot;App Install&quot;
   ),
  ISPICKVAL( 
  Digital_Details_2__c , 
  &quot;OS Update&quot;
   ),    
  ISPICKVAL( 
   Digital_Details_2__c , 
   &quot;Using the app&quot;
  )
 ) 
)
)</errorConditionFormula>
        <errorMessage>Product-&gt;Apple News App-&gt;Information- valid options:  App Install; Navigate to; OS Update; Using the app.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlistVal_ANewsApp_Issue_Val_Option</fullName>
        <active>true</active>
        <description>Product-&gt;Apple News App-&gt;Issue- valid options: Access; Content; Navigation; Performance; Text Size.</description>
        <errorConditionFormula>AND( 
 ISPICKVAL( 
 Reason , 
 &quot;Products&quot;
 ), 
 ISPICKVAL( 
 Type_Of_Issue__c , 
 &quot;Apple News App&quot;
 ), 
 ISPICKVAL( 
 Digital_Details__c , 
 &quot;Issue&quot;
 ), 
 Not(
  Or(
   ISPICKVAL( 
   Digital_Details_2__c , 
   &quot;&quot;
    ),
   ISPICKVAL( 
   Digital_Details_2__c , 
   &quot;Access&quot;
    ),
   ISPICKVAL( 
   Digital_Details_2__c , 
   &quot;Performance&quot;
    ),
 
   ISPICKVAL( 
    Digital_Details_2__c , 
    &quot;Navigation&quot;
    ),    
   ISPICKVAL( 
    Digital_Details_2__c , 
    &quot;Text Size&quot;
    ),    

   ISPICKVAL( 
    Digital_Details_2__c , 
    &quot;Content&quot;
   )
  ) 
 )
)</errorConditionFormula>
        <errorMessage>Product-&gt;Apple News App-&gt;Issue- valid options: Access; Content; Navigation; Performance; Text Size.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlistVal_ANewsApp_Issue_X_No_Child</fullName>
        <active>true</active>
        <description>Product-&gt;Apple News App-&gt;Issue: no Case Detail 4 options are valid (leave unselected)</description>
        <errorConditionFormula>AND(
ISPICKVAL(
    Reason , 
   &quot;Products&quot;),
  ISPICKVAL(
     Type_Of_Issue__c , 
   &quot;Apple News App&quot;),
  ISPICKVAL(
      Digital_Details__c  , 
   &quot;Issue&quot;),
  NOT(ISPICKVAL(
       Digital_Details_3__c   , 
   &quot;&quot;))
)</errorConditionFormula>
        <errorMessage>Product-&gt;Apple News App-&gt;Issue: no Case Detail 4 options are valid (leave unselected)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PlistVal_EReader_Feedback_No_Child</fullName>
        <active>true</active>
        <description>Product-&gt;E-Reader App-&gt;Feedback: no Case Detail 4 options are valid (leave unselected)</description>
        <errorConditionFormula>AND(
ISPICKVAL(
    Reason , 
   &quot;Products&quot;),
  ISPICKVAL(
     Type_Of_Issue__c , 
   &quot;E-Reader App&quot;),
  ISPICKVAL(
      Digital_Details__c  , 
   &quot;Feedback&quot;),
  NOT(ISPICKVAL(
       Digital_Details_3__c   , 
   &quot;&quot;))
)</errorConditionFormula>
        <errorMessage>Product-&gt;E-Reader App-&gt;Feedback: no Case Detail 4 options are valid (leave unselected)</errorMessage>
    </validationRules>
</CustomObject>